add support for map types and $key placeholder

--- a/test/fixtures/locales/US/en/handler.properties
+++ b/test/fixtures/locales/US/en/handler.properties
@@ -7,3 +7,12 @@ states[2]=OR
 names[0]=$idx. Larry
 names[1]=$idx. Moe
 names[2]=$idx. Curly
+
+state[CA]=California
+state[MI]=Michigan
+state[OR]=Oregon
+
+stooge[Larry]=$key Fine
+stooge[Moe]=$key Howard
+stooge[Curly]=$key Howard
+stooge[Shemp]=$key Howard
