adding test scenario for an option list with a value attribute

--- a/test/fixtures/locales/US/en/handler.properties
+++ b/test/fixtures/locales/US/en/handler.properties
@@ -16,3 +16,7 @@ stooge[Larry]=$key Fine
 stooge[Moe]=$key Howard
 stooge[Curly]=$key Howard
 stooge[Shemp]=$key Howard
+
+months.1=1
+months.2=2
+months.3=3
