Add mode=json processing and test cases

--- a/test/fixtures/locales/US/en/handler.properties
+++ b/test/fixtures/locales/US/en/handler.properties
@@ -20,3 +20,15 @@ stooge[Shemp]=$key Howard
 months.1=1
 months.2=2
 months.3=3
+
+fillNames[0]=Hello {name}
+fillNames[1]=Hi {name}
+
+textQuote="This has quotes"
+backslashQuote=I\O
+controlQuote=tab	tab
+
+listQuote[0]="This has quotes"
+listQuote[1]=I\O
+listQuote[2]=tab	tab
+
