Add test content

--- a/test/fixtures/locales/US/en/handler.properties
+++ b/test/fixtures/locales/US/en/handler.properties
@@ -32,3 +32,11 @@ listQuote[0]="This has quotes"
 listQuote[1]=I\O
 listQuote[2]=tab	tab
 
+tabs4=4tabs				tab
+
+bankRules.BOFA.bankInfo=Payment
+bankRules.BOFA.transfer=Transfers
+
+bankRules.HSBC.bankInfo=Foreign
+bankRules.HSBC.transfer=Others
+
