Fix failure when mode attribute is accidentally omitted

--- a/test/fixtures/locales/US/en/handler.properties
+++ b/test/fixtures/locales/US/en/handler.properties
@@ -4,6 +4,10 @@ states[0]=CA
 states[1]=MI
 states[2]=OR
 
+states2.west[0]=CA
+states2.east[1]=MI
+states2.west[2]=OR
+
 names[0]=$idx. Larry
 names[1]=$idx. Moe
 names[2]=$idx. Curly
